--- a/public/styles/product.css
+++ b/public/styles/product.css
@@ -1,4 +1,5 @@
 .product {
+  padding: 2vh 2vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -21,15 +22,28 @@
 
 .product .rightInfo {
   width: 25%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .product .rightInfo .more-info {
+  margin: 2vh 0;
   border: 1px solid rgba(166, 166, 166, 0.575);
   border-radius: 5%;
 }
 
 .product .rightInfo .more-info ul {
-  padding: 0;
+  margin: 0;
+  padding: 10% 0;
   list-style-type: none;
 }
 
@@ -37,6 +51,9 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .product .rightInfo .more-info ul li svg {
@@ -46,4 +63,15 @@
 
 .product .rightInfo .more-info ul li p {
   margin: 0;
+  width: 98%;
+}
+
+.product .rightInfo .label {
+  margin: 1vh 0;
+  padding: 1em 0 1em 3%;
+  width: 95%;
+  height: 3.5em;
+  position: relative;
+  left: 2%;
+  border-radius: 10px;
 }
