--- a/public/styles/product.css
+++ b/public/styles/product.css
@@ -6,8 +6,8 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  border-top: 1px solid gray;
-  border-bottom: 1px solid gray;
+  border-top: 2px solid rgba(213, 213, 213, 0.5);
+  border-bottom: 2px solid rgba(213, 213, 213, 0.5);
   font-size: 2vh;
 }
 
@@ -18,6 +18,52 @@
 
 .product .product-info {
   width: 30%;
+}
+
+.product .product-info .alternative {
+  display: table;
+  width: 100%;
+  height: 10vh;
+  justify-items: space-between;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-spacing: 10px;
+}
+
+.product .product-info .alternative .model {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  border: 1px solid rgba(128, 128, 128, 0.658);
+  border-radius: 5px;
+}
+
+.product .product-info .alternative .model p {
+  margin: 0;
+}
+
+.product .product-info .purchase-btn {
+  margin: 0;
+  width: 100%;
+  height: 10vh;
+  border: none;
+  border-radius: 5px;
+  background-color: #FFC107;
+  color: #F8F9FA;
+  font-size: 90%;
+}
+
+.product .product-info .divider {
+  margin: 1vh;
+  padding: 0;
+  width: 100%;
+  border: 1px dashed rgba(213, 213, 213, 0.5);
+}
+
+.product .product-info p {
+  margin: 0;
+  vertical-align: middle;
+  text-align: center;
 }
 
 .product .rightInfo {
