--- a/public/styles/product.scss
+++ b/public/styles/product.scss
@@ -2,8 +2,8 @@
     padding: 2vh 2vw;
     display: flex;
     justify-content: space-between;
-    border-top: 1px solid gray;
-    border-bottom: 1px solid gray;
+    border-top: 2px solid rgba(213, 213, 213, 0.5);
+    border-bottom: 2px solid rgba(213, 213, 213, 0.5);
     font-size: 2vh;
     .product-image {
         width: 30%;
@@ -11,6 +11,45 @@
     }
     .product-info {
         width: 30%;
+        .alternative {
+            display: table;
+            width: 100%;
+            height: 10vh;
+            justify-items: space-between;
+            box-sizing: border-box;
+            border-spacing: 10px;
+            .model {
+                display: table-cell;
+                vertical-align: middle;
+                text-align: center;
+                border: 1px solid rgba(128, 128, 128, 0.658);
+                border-radius: 5px;
+                p {
+                    margin: 0;
+                }
+            }
+        }
+        .purchase-btn {
+            margin: 0;
+            width: 100%;
+            height: 10vh;
+            border: none;
+            border-radius: 5px;
+            background-color: #FFC107;
+            color: #F8F9FA;
+            font-size: 90%;
+        }
+        .divider {
+            margin: 1vh;
+            padding: 0;
+            width: 100%;
+            border: 1px dashed rgba(213, 213, 213, 0.5);
+        }
+        p {
+            margin: 0;
+            vertical-align: middle;
+            text-align: center;
+        }
     }
     .rightInfo {
         width: 25%;
