--- a/public/styles/product.scss
+++ b/public/styles/product.scss
@@ -57,6 +57,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        overflow: hidden;
         .more-info {
             margin: 2vh 0;
             border: 1px solid rgba(166, 166, 166, 0.575);
@@ -87,6 +88,13 @@
             position: relative;
             left: 2%;
             border-radius: 10px;
+        }
+        .branch-container {
+            width: 90%;
+            height: 30vh;
+            overflow-x: hidden;
+            overflow-y: scroll;
+            box-sizing: content-box;
         }
     }
 }
