--- a/public/index.css
+++ b/public/index.css
@@ -1,6 +1,56 @@
-#map {
-  height: 400px;
+.location-wrapper {
+  position: relative;
   width: 100vw;
+  height: 400px;
+  border: 1px solid green;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.location-wrapper .map {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  height: 400px;
+  width: 50%;
   border: 1px solid red;
+}
+
+.location-wrapper .location-info {
+  height: 400px;
+  width: 50vw;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.home-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}
+
+.home-wrapper .login-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  width: 100%;
+  height: 100vh;
+  border: 1px solid red;
+  visibility: hidden;
+  background-color: white;
+}
+
+.home-wrapper .active {
+  visibility: visible;
+}
+
+.home-wrapper .main-screen {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  z-index: 1;
 }
 /*# sourceMappingURL=index.css.map */
