--- a/public/index.scss
+++ b/public/index.scss
@@ -1,5 +1,2 @@
-#map{
-    height: 400px;
-    width: 100vw;
-    border:1px solid red;
-}
+@import './styles/location.scss';
+@import './styles/loginForm.scss';
