--- a/public/index.css
+++ b/public/index.css
@@ -4,6 +4,14 @@
   border: 1px solid red;
 }
 
+.container {
+  width: 100%;
+  margin: 0;
+  -ms-flex-item-align: start;
+      -ms-grid-row-align: start;
+      align-self: start;
+}
+
 #map {
   height: 400px;
   width: 80%;
@@ -12,11 +20,6 @@
 
 body {
   min-height: 80vh;
-}
-
-.container {
-  height: 100%;
-  width: 100vw;
 }
 
 .footer-container {
@@ -71,5 +74,41 @@ body {
 
 h1 {
   text-align: center;
+}
+
+.categoryPage {
+  width: 95vw;
+  margin: 0;
+  border: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.categoryList {
+  margin: 0%;
+  border: solid;
+  border-color: black;
+  background-color: #9ed7ee;
+  width: 15vw;
+  height: 100%;
+  display: inline-block;
+}
+
+.product_matrix {
+  display: inline;
+  right: 0;
+  width: 80vw;
+}
+
+.product_item {
+  border: solid;
+  display: inline-block;
+  margin: 5px;
+}
+
+.product_item img {
+  height: 250px;
+  width: 15vw;
 }
 /*# sourceMappingURL=index.css.map */
