--- a/public/index.scss
+++ b/public/index.scss
@@ -3,4 +3,9 @@
     width: 100vw;
     border:1px solid red;
 }
+.container {
+    width: 100%;
+    margin: 0;
+    align-self: start;
+}
 @import "./styles/long.scss"
