--- a/public/styles/long.css
+++ b/public/styles/long.css
@@ -8,11 +8,6 @@ body {
   min-height: 80vh;
 }
 
-.container {
-  height: 100%;
-  width: 100vw;
-}
-
 .footer-container {
   height: 10%;
   position: relative;
@@ -65,5 +60,41 @@ body {
 
 h1 {
   text-align: center;
+}
+
+.categoryPage {
+  width: 95vw;
+  margin: 0;
+  border: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.categoryList {
+  margin: 0%;
+  border: solid;
+  border-color: black;
+  background-color: #9ed7ee;
+  width: 15vw;
+  height: 100%;
+  display: inline-block;
+}
+
+.product_matrix {
+  display: inline;
+  right: 0;
+  width: 80vw;
+}
+
+.product_item {
+  border: solid;
+  display: inline-block;
+  margin: 5px;
+}
+
+.product_item img {
+  height: 250px;
+  width: 15vw;
 }
 /*# sourceMappingURL=long.css.map */
