remove long.scss

--- a/public/index.scss
+++ b/public/index.scss
@@ -3,4 +3,6 @@
     width: 100vw;
     border:1px solid red;
 }
-@import "./styles/long.scss"
+@import "./styles/footer";
+@import "./styles/installment";
+@import "./styles/returnpolicy"
