--- a/public/styles/_returnpolicy.scss
+++ b/public/styles/_returnpolicy.scss
@@ -4,18 +4,25 @@
 body {
     height: 80%;
 }
-.return_table {
-    @include border();
-    width: 100%;
-    justify-content: center;
-    background-color: rgb(245, 252, 206);
-    th {
-        @include border();
+.returnpolicy {
+    position: relative;
+    left: 20vw;
+    h1 {
         text-align: center;
-        width: 50%;
     }
-    td {
+    .return_table {
         @include border();
-        
+        width: 100%;
+        justify-content: center;
+        background-color: rgb(245, 252, 206);
+        th {
+            @include border();
+            text-align: center;
+            width: 50%;
+        }
+        td {
+            @include border();
+            
+        }
     }
 }
