--- a/public/index.css
+++ b/public/index.css
@@ -4,6 +4,11 @@
   border: 1px solid red;
 }
 
+.container {
+  width: 100%;
+  margin: 0;
+}
+
 #map {
   height: 400px;
   width: 80%;
@@ -46,7 +51,12 @@ body {
   list-style: none;
 }
 
-h1 {
+.installment {
+  position: relative;
+  left: 20vw;
+}
+
+.installment h1 {
   text-align: center;
 }
 
@@ -54,7 +64,16 @@ body {
   height: 80%;
 }
 
-.return_table {
+.returnpolicy {
+  position: relative;
+  left: 20vw;
+}
+
+.returnpolicy h1 {
+  text-align: center;
+}
+
+.returnpolicy .return_table {
   border: solid 4px;
   width: 100%;
   -webkit-box-pack: center;
@@ -63,13 +82,22 @@ body {
   background-color: #f5fcce;
 }
 
-.return_table th {
+.returnpolicy .return_table th {
   border: solid 4px;
   text-align: center;
   width: 50%;
 }
 
-.return_table td {
+.returnpolicy .return_table td {
   border: solid 4px;
+}
+
+.warranty {
+  position: relative;
+  left: 20vw;
+}
+
+.warranty h1 {
+  text-align: center;
 }
 /*# sourceMappingURL=index.css.map */
