--- a/public/styles/product.css
+++ b/public/styles/product.css
@@ -11,12 +11,42 @@
   font-size: 2vh;
 }
 
-.product .carousel-indicators {
+.product #carouselIndicators {
+  width: 50%;
+  height: 50%;
+}
+
+.product #carouselIndicators .carousel-indicators {
   border: 1px solid black;
 }
 
-.product .carousel-indicators li {
+.product #carouselIndicators .carousel-indicators li {
   background-color: black;
+}
+
+.product #carouselIndicators .carousel-inner {
+  width: 100%;
+  height: 100%;
+}
+
+.product #carouselIndicators .carousel-inner .carousel-item img {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
+
+.product #carouselIndicators .carousel-inner .carousel-item-left {
+  width: 100%;
+  height: 100%;
+}
+
+.product #carouselIndicators .carousel-inner .carousel-item-right {
+  width: 100%;
+  height: 100%;
+}
+
+.product #carouselIndicators .carousel-control-prev-icon {
+  color: #FFC107;
 }
 
 .product .product-info {
