--- a/public/styles/product.css
+++ b/public/styles/product.css
@@ -16,12 +16,8 @@
   height: 50%;
 }
 
-.product #carouselIndicators .carousel-indicators {
-  border: 1px solid black;
-}
-
 .product #carouselIndicators .carousel-indicators li {
-  background-color: black;
+  background-color: #818181;
 }
 
 .product #carouselIndicators .carousel-inner {
@@ -45,8 +41,14 @@
   height: 100%;
 }
 
-.product #carouselIndicators .carousel-control-prev-icon {
-  color: #FFC107;
+.product #carouselIndicators .carousel-control-prev {
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.1)), to(rgba(0, 0, 0, 0)));
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
+}
+
+.product #carouselIndicators .carousel-control-next {
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.1)));
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
 }
 
 .product .product-info {
