--- a/public/styles/product.scss
+++ b/public/styles/product.scss
@@ -9,9 +9,8 @@
         width: 50%;
         height: 50%;
         .carousel-indicators {
-            border: 1px solid black;
             li {
-                background-color: black;
+                background-color: rgb(129, 129, 129);
             }
         }
         .carousel-inner {
@@ -33,8 +32,11 @@
                 height: 100%;
             }
         }
-        .carousel-control-prev-icon {
-            color: #FFC107;
+        .carousel-control-prev {
+            background-image: linear-gradient(to right, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
+        }
+        .carousel-control-next {
+            background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
         }
     }
     .product-info {
