--- a/public/index.css
+++ b/public/index.css
@@ -4,6 +4,11 @@
   border: 1px solid red;
 }
 
+.container {
+  width: 100%;
+  margin: 0;
+}
+
 #map {
   height: 400px;
   width: 80%;
@@ -41,7 +46,12 @@ body {
   list-style: none;
 }
 
-h1 {
+.installment {
+  position: relative;
+  left: 20vw;
+}
+
+.installment h1 {
   text-align: center;
 }
 
@@ -49,7 +59,16 @@ body {
   height: 80%;
 }
 
-.return_table {
+.returnpolicy {
+  position: relative;
+  left: 20vw;
+}
+
+.returnpolicy h1 {
+  text-align: center;
+}
+
+.returnpolicy .return_table {
   border: solid 4px;
   width: 100%;
   -webkit-box-pack: center;
@@ -58,26 +77,33 @@ body {
   background-color: #f5fcce;
 }
 
-.return_table th {
+.returnpolicy .return_table th {
   border: solid 4px;
   text-align: center;
   width: 50%;
 }
 
-.return_table td {
+.returnpolicy .return_table td {
   border: solid 4px;
+}
+
+.warranty {
+  position: relative;
+  left: 20vw;
+}
+
+.warranty h1 {
+  text-align: center;
 }
 
 .categoryPage {
   width: 95vw;
-  margin: 0;
-  border: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.categoryList {
+.categoryPage .categoryList {
   margin: 0%;
   border: solid;
   border-color: black;
@@ -87,20 +113,24 @@ body {
   display: inline-block;
 }
 
-.product_matrix {
+.categoryPage .product_matrix {
   display: inline;
   right: 0;
   width: 80vw;
 }
 
-.product_item {
+.categoryPage .product_matrix .product_item {
   border: solid;
   display: inline-block;
   margin: 5px;
 }
 
-.product_item img {
+.categoryPage .product_matrix .product_item img {
   height: 250px;
   width: 15vw;
+}
+
+.categoryPage .product_matrix .product_item:hover {
+  border-color: red;
 }
 /*# sourceMappingURL=index.css.map */
