--- a/public/styles/_footer.scss
+++ b/public/styles/_footer.scss
@@ -7,7 +7,6 @@ body {
     min-height: 80vh;
 }
 
-
 .footer-container {
     height: 10%;
     position: relative;
@@ -24,7 +23,9 @@ body {
         height: 100%; 
         top: 0;
         padding-left: 20px;
-        
+        ul {
+
+        }
         li {
             list-style: none;
         }
