--- a/public/index.css
+++ b/public/index.css
@@ -2,14 +2,16 @@
   border: 1px solid green;
 }
 
-<<<<<<< HEAD
 .container {
   width: 100%;
   margin: 0;
 }
 
 #map {
-=======
+  height: 400px;
+  width: 100%;
+  border: 1px solid green;
+}
 .footer-container .col1 .location-wrapper {
   width: 100%;
   height: 100%;
@@ -17,7 +19,6 @@
 }
 
 .footer-container .col1 .location-wrapper .map {
->>>>>>> main
   height: 400px;
   width: 100%;
   border: 1px solid green;
