fix footer + style. + ...

--- a/public/index.scss
+++ b/public/index.scss
@@ -1,7 +1,6 @@
-<<<<<<< HEAD
 #map{
     height: 400px;
-    width: 100vw;
+    width: 80%;
     border:1px solid red;
 }
 .container {
@@ -13,8 +12,6 @@
 @import "./styles/returnpolicy";
 @import "./styles/warranty";
 @import "./styles/category";
-=======
-@import './styles/location.scss';
-@import './styles/loginForm.scss';
-@import "./styles/long.scss";
->>>>>>> main
+@import './styles/location';
+@import './styles/loginForm';
+
