--- a/public/styles/location.scss
+++ b/public/styles/location.scss
@@ -1,6 +1,6 @@
 .footer-container{
     .col1{
-        border: 1px solid green;
+        //border: 1px solid green;
         .location-wrapper {
             width: 100%;
             height: 100%;
@@ -8,7 +8,7 @@
             .map {
                 height: 400px;
                 width: 100%;
-                border: 1px solid green;
+                // border: 1px solid green;
             }
         }
     }
