--- a/public/index.scss
+++ b/public/index.scss
@@ -5,7 +5,7 @@
 }
 .container {
     width: 100%;
-    margin: 0;
+    margin: 0 5%;
 }
 @import "./styles/footer";
 @import "./styles/installment";
@@ -14,4 +14,3 @@
 @import "./styles/category";
 @import './styles/location';
 @import './styles/loginForm';
-
