--- a/public/styles/product.scss
+++ b/public/styles/product.scss
@@ -6,8 +6,9 @@
     border-bottom: 2px solid rgba(213, 213, 213, 0.5);
     font-size: 2vh;
     #carouselIndicators {
-        width: 50%;
-        height: 50%;
+        margin: 0 5%;
+        width: 60vh;
+        height: 60vh;
         .carousel-indicators {
             li {
                 background-color: rgb(129, 129, 129);
