--- a/public/index.css
+++ b/public/index.css
@@ -6,7 +6,7 @@
 
 .container {
   width: 100%;
-  margin: 0;
+  margin: 0 5%;
 }
 
 body {
@@ -168,4 +168,3 @@ body {
   top: 0px;
   z-index: 1;
 }
-/*# sourceMappingURL=index.css.map */
