--- a/public/styles/product.scss
+++ b/public/styles/product.scss
@@ -1,3 +1,4 @@
+@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
 .product {
     padding: 2vh 2vw;
     display: flex;
@@ -7,8 +8,8 @@
     font-size: 2vh;
     #carouselIndicators {
         margin: 0 5%;
-        width: 60vh;
-        height: 60vh;
+        width: 40vh;
+        height: 40vh;
         .carousel-indicators {
             li {
                 background-color: rgb(129, 129, 129);
@@ -34,10 +35,28 @@
             }
         }
         .carousel-control-prev {
-            background-image: linear-gradient(to right, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
+            .carousel-control-prev-icon {
+                margin: 10%;
+                width: 2vw;
+                height: 2vw;
+                border-radius: 50%;
+                background-color: #ffc1074d;
+                &:hover {
+                    background-color: #ffc107bb;
+                }
+            }
         }
         .carousel-control-next {
-            background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
+            .carousel-control-next-icon {
+                margin: 10%;
+                width: 2vw;
+                height: 2vw;
+                border-radius: 50%;
+                background-color: #ffc1074d;
+                &:hover {
+                    background-color: #ffc107bb;
+                }
+            }        
         }
     }
     .product-info {
@@ -84,7 +103,7 @@
         .btn-group {
             margin-bottom: 5vh;
             display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-columns: 1fr 1fr;
             grid-gap: 1vw;
             justify-content: space-around;
             .grid-item {
@@ -150,6 +169,45 @@
             // overflow-x: hidden;
             overflow-y: scroll;
             box-sizing: content-box;
+        }
+    }
+}
+.additional-info {
+    height: max-content;
+    margin-bottom: 8vh;
+    #rating{
+        border: none;
+        padding: 0;
+        height: 5vh;
+        float: left;
+        input {
+            display: none;
+        }
+        label:before {
+            margin: 5px;
+            font-size: 1.255em;
+            font-family: FontAwesome;
+            display: inline-block;
+            content: "\f005";
+        }
+        .half:before{
+            content: "\f089";
+            position: absolute;
+        }
+        label {
+            color: #ddd;
+            float: right;
+        }
+        input:checked ~ label,
+        &:not(:checked) > label:hover,
+        &:not(:checked) > label:hover ~ label {
+            color:#FFD700;
+        }
+        input:checked+label:hover,
+        input:checked~label:hover,
+        label:hover~input:checked~label,
+        input:checked~label:hover~label {
+            color: #FFED85;
         }
     }
 }
