--- a/public/index.css
+++ b/public/index.css
@@ -143,7 +143,7 @@ body {
 .home-wrapper {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: auto;
 }
 
 .home-wrapper .login-wrapper {
