--- a/public/index.css
+++ b/public/index.css
@@ -178,12 +178,31 @@ body {
   overflow-y: auto;
 }
 
+.admin-layout .container .manage-staff-container .table-action {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 80px;
+  padding-top: 16px;
+  margin-bottom: 24px;
+  border: 1px solid green;
+}
+
+.admin-layout .container .manage-staff-container .table-action .btn-create-staff {
+  position: absolute;
+  right: 16px;
+  width: auto;
+  padding: 4px 14px;
+  height: 30px;
+  line-height: 15px;
+  border: 1px solid blue;
+}
+
 .admin-layout .container .manage-staff-container .staff-table-wrapper {
   width: 100%;
   border: 1px solid red;
-  height: 100vh;
-  overflow-x: hidden;
-  overflow-y: auto;
+  height: 80%;
 }
 
 .admin-layout .container .manage-staff-container .staff-table-wrapper .staff-table-row {
@@ -193,11 +212,13 @@ body {
   width: 100%;
   height: 40px;
   border: 1px solid blue;
+  text-align: center;
 }
 
 .admin-layout .container .manage-staff-container .staff-table-wrapper .staff-table-row .table-cell {
   width: 50px;
   border: 0.5px solid black;
+  text-align: center;
 }
 
 .admin-layout .slide-bar {
