--- a/public/styles/admin.scss
+++ b/public/styles/admin.scss
@@ -11,23 +11,41 @@
             height: 100vh;
             overflow-x: hidden;
             overflow-y: auto;
+            .table-action {
+                position: relative;
+                display: flex;
+                height: 80px;
+                padding-top: 16px;
+                margin-bottom: 24px;
+                border: 1px solid green;
 
+                .btn-create-staff {
+                    position: absolute;
+                    right: 16px;
+                    width: auto;
+                    padding: 4px 14px;
+                    height: 30px;
+                    line-height: 15px;
+                    border: 1px solid blue;
+                }
+            }
             .staff-table-wrapper {
                 width: 100%;
                 border: 1px solid red;
-                height: 100vh;
-                overflow-x: hidden;
-                overflow-y: auto;
+                height: 80%;
+                // overflow-x: hidden;
+                // overflow-y: auto;
 
                 .staff-table-row {
                     display: flex;
                     width: 100%;
                     height: 40px;
                     border: 1px solid blue;
-
+                    text-align: center;
                     .table-cell {
                         width: 50px;
                         border: 0.5px solid black;
+                        text-align: center;
                     }
                 }
             }
