--- a/public/styles/loginForm.scss
+++ b/public/styles/loginForm.scss
@@ -1,7 +1,7 @@
 .home-wrapper{
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: auto;
     .login-wrapper {
         position: absolute;
         top: 0;
