--- a/public/styles/admin.scss
+++ b/public/styles/admin.scss
@@ -2,11 +2,12 @@
     display: flex;
     margin:0px;
     padding:0px;
-    // height: 100vh !important;
+    height: 100vh !important;
     .container {
         margin: 0px;
         padding: 0px 24px;
         max-width: 100%;
+        height: 100vh;
         .manage-staff-container {
             height: 100vh;
             overflow-x: hidden;
@@ -18,7 +19,7 @@
                 padding-top: 16px;
                 margin-bottom: 24px;
                 border: 1px solid green;
-
+                justify-content: center;
                 .btn-create-staff {
                     position: absolute;
                     right: 16px;
@@ -48,6 +49,22 @@
                         text-align: center;
                     }
                 }
+            }
+            .staff-update-form {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                width: 500px;
+                border: 1px solid red;
+                z-index: 100;
+                background-color: white;
+                transform: translate(-50%, -50%);
+                visibility: hidden;
+            }
+
+            .active {
+                visibility: visible;
+                //display: unset;
             }
 
         }
@@ -93,6 +110,19 @@
             text-align: center;
             width: 100%;
             height: 40px;
+        }
+        .side-bar-function-list {
+            margin-top: 24px;
+            width: 100%;
+            border: 1px solid green;
+            height: calc(100% - 164px);
+
+            .function-item {
+                height: 30px;
+                text-align: center;
+                border: 1px solid red;
+                margin: 5px 0px;
+            }
         }
     }
 
