--- a/public/index.css
+++ b/public/index.css
@@ -3,6 +3,8 @@ body {
 }
 
 .footer-container {
+  position: relative;
+  bottom: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -130,7 +132,7 @@ body {
 .home-wrapper {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: auto;
 }
 
 .home-wrapper .login-wrapper {
