--- a/public/styles/loginForm.css
+++ b/public/styles/loginForm.css
@@ -1,13 +1,10 @@
 .home-wrapper {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: auto;
 }
 
 .home-wrapper .login-wrapper {
-  position: absolute;
-  top: 0;
-  left: 0;
   z-index: 5;
   width: 100%;
   height: 100vh;
