--- a/public/styles/product.scss
+++ b/public/styles/product.scss
@@ -8,8 +8,8 @@
     font-size: 2vh;
     #carouselIndicators {
         margin: 0 5%;
-        width: 40vh;
-        height: 40vh;
+        width: 30%;
+        height: 100%;
         .carousel-indicators {
             li {
                 background-color: rgb(129, 129, 129);
@@ -126,7 +126,7 @@
         }
     }
     .rightInfo {
-        width: 25%;
+        width: 30%;
         height: 100%;
         display: flex;
         flex-direction: column;
