Done review cart + deliver flow

--- a/public/index.scss
+++ b/public/index.scss
@@ -7,5 +7,6 @@
 @import './styles/location';
 @import './styles/loginForm';
 @import './styles/admin';
-
-
+@import './styles/product';
+@import './styles/cart';
+@import './styles/order';
