--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,4 @@
+@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
 body {
   min-height: 80vh;
 }
@@ -136,9 +137,7 @@ body {
 }
 
 .home-wrapper .login-wrapper {
-  position: absolute;
-  top: 0;
-  left: 0;
+  position: fixed;
   z-index: 5;
   width: 100%;
   height: 100vh;
@@ -297,4 +296,566 @@ body {
   text-align: center;
   border: 1px solid red;
   margin: 5px 0px;
+}
+
+.product {
+  padding: 2vh 2vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border-top: 2px solid rgba(213, 213, 213, 0.5);
+  border-bottom: 2px solid rgba(213, 213, 213, 0.5);
+  font-size: 2vh;
+}
+
+.product #carouselIndicators {
+  margin: 0 5%;
+  width: 30%;
+  height: 100%;
+}
+
+.product #carouselIndicators .carousel-indicators li {
+  background-color: #818181;
+}
+
+.product #carouselIndicators .carousel-inner {
+  width: 100%;
+  height: 100%;
+}
+
+.product #carouselIndicators .carousel-inner .carousel-item img {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
+
+.product #carouselIndicators .carousel-inner .carousel-item-left {
+  width: 100%;
+  height: 100%;
+}
+
+.product #carouselIndicators .carousel-inner .carousel-item-right {
+  width: 100%;
+  height: 100%;
+}
+
+.product #carouselIndicators .carousel-control-prev .carousel-control-prev-icon {
+  margin: 10%;
+  width: 2vw;
+  height: 2vw;
+  border-radius: 50%;
+  background-color: #ffc1074d;
+}
+
+.product #carouselIndicators .carousel-control-prev .carousel-control-prev-icon:hover {
+  background-color: #ffc107bb;
+}
+
+.product #carouselIndicators .carousel-control-next .carousel-control-next-icon {
+  margin: 10%;
+  width: 2vw;
+  height: 2vw;
+  border-radius: 50%;
+  background-color: #ffc1074d;
+}
+
+.product #carouselIndicators .carousel-control-next .carousel-control-next-icon:hover {
+  background-color: #ffc107bb;
+}
+
+.product .product-info {
+  width: 30%;
+}
+
+.product .product-info .alternative {
+  display: table;
+  width: 100%;
+  height: 10vh;
+  justify-items: space-between;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-spacing: 10px;
+}
+
+.product .product-info .alternative .model {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  border: 1px solid rgba(128, 128, 128, 0.658);
+  border-radius: 5px;
+}
+
+.product .product-info .alternative .model p {
+  margin: 0;
+}
+
+.product .product-info .purchase-btn {
+  margin: 0;
+  width: 100%;
+  height: 10vh;
+  border: none;
+  border-radius: 5px;
+  background-color: #FFC107;
+  color: #F8F9FA;
+  font-size: 90%;
+}
+
+.product .product-info .divider {
+  margin: 1vh;
+  padding: 0;
+  width: 100%;
+  border: 1px dashed rgba(213, 213, 213, 0.5);
+}
+
+.product .product-info p {
+  margin: 0;
+  vertical-align: middle;
+  text-align: center;
+}
+
+.product .product-info .btn-group {
+  margin-bottom: 5vh;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  grid-gap: 1vw;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.product .product-info .btn-group .grid-item {
+  padding: 0;
+  padding-left: 5%;
+  text-align: left;
+  border: 1px solid black;
+  border-radius: 10px;
+  -webkit-box-shadow: -5px 5px 10px 0px rgba(0, 0, 0, 0.15);
+          box-shadow: -5px 5px 10px 0px rgba(0, 0, 0, 0.15);
+}
+
+.product .product-info .btn-group .grid-item h6 {
+  margin: 0;
+}
+
+.product .product-info .btn-group .grid-item p {
+  text-align: left;
+}
+
+.product .product-info .btn-group .grid-item:focus {
+  border: 1px solid red;
+}
+
+.product .rightInfo {
+  width: 30%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  overflow: hidden;
+}
+
+.product .rightInfo .more-info {
+  margin: 2vh 0;
+  border: 1px solid rgba(166, 166, 166, 0.575);
+  border-radius: 5%;
+}
+
+.product .rightInfo .more-info ul {
+  margin: 0;
+  padding: 10% 0;
+  list-style-type: none;
+}
+
+.product .rightInfo .more-info ul li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.product .rightInfo .more-info ul li svg {
+  position: relative;
+  top: 1vh;
+}
+
+.product .rightInfo .more-info ul li p {
+  margin: 0;
+  width: 98%;
+}
+
+.product .rightInfo .label {
+  margin: 1vh 0;
+  padding: 1em 0 1em 3%;
+  width: 95%;
+  height: 3.5em;
+  position: relative;
+  left: 2%;
+  border-radius: 10px;
+}
+
+.product .rightInfo .branch-container {
+  width: 90%;
+  height: 30vh;
+  overflow-y: scroll;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+}
+
+.additional-info {
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+}
+
+.additional-info #rating {
+  padding: 0;
+  height: 5vh;
+  border: none;
+  float: left;
+}
+
+.additional-info #rating input {
+  display: none;
+}
+
+.additional-info #rating label:before {
+  margin: 5px;
+  font-size: 1.255em;
+  font-family: FontAwesome;
+  display: inline-block;
+  content: "\f005";
+}
+
+.additional-info #rating .half:before {
+  content: "\f089";
+  position: absolute;
+}
+
+.additional-info #rating label {
+  color: #ddd;
+  float: right;
+}
+
+.additional-info #rating input:checked ~ label,
+.additional-info #rating:not(:checked) > label:hover,
+.additional-info #rating:not(:checked) > label:hover ~ label {
+  color: #FFD700;
+}
+
+.additional-info #rating input:checked + label:hover,
+.additional-info #rating input:checked ~ label:hover,
+.additional-info #rating label:hover ~ input:checked ~ label,
+.additional-info #rating input:checked ~ label:hover ~ label {
+  color: #FFED85;
+}
+
+.additional-info .form-group {
+  position: relative;
+  width: 100%;
+  height: 25vh;
+}
+
+.additional-info .form-group .input-comment {
+  margin-top: 10vh;
+}
+
+.additional-info .form-group .mb-2 {
+  position: absolute;
+  right: 0;
+  margin: 0;
+  margin-top: 1vh;
+  padding: 1vh 1vw;
+  width: 4rem;
+  height: 2rem;
+  border: none;
+  font-size: 70%;
+  text-align: center;
+}
+
+.additional-info .comment-container {
+  margin-bottom: 5vh;
+  width: 100%;
+}
+
+.additional-info .comment-container .comment-element {
+  margin: 1vh 0;
+}
+
+.additional-info .comment-container .comment-element .comment-info {
+  padding: 0 1vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 5vh;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.additional-info .comment-container .comment-element .comment-info .time {
+  margin: 0;
+  font-size: 70%;
+}
+
+.additional-info .comment-container .comment-element .content {
+  padding: 1em;
+  border-radius: 15px;
+}
+
+.additional-info .comment-container .answer-comment {
+  position: relative;
+  left: 2vw;
+  border-radius: 10px;
+  background-color: rgba(224, 224, 224, 0.658);
+}
+
+.box-confirm {
+  display: none;
+  position: fixed;
+  top: 40vh;
+  left: 35vw;
+  width: 30vw;
+  height: 20vh;
+  z-index: 1000;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  background-color: white;
+  font-size: 80%;
+}
+
+.box-confirm .message-header {
+  width: 100%;
+  height: 20%;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0 5%;
+  border-bottom: 1px solid #dedede;
+}
+
+.box-confirm .message-header h6 {
+  margin-bottom: 0;
+}
+
+.box-confirm .message-header .close-btn {
+  position: relative;
+  width: 5%;
+  height: 100%;
+  background: none;
+  border: none;
+}
+
+.box-confirm .message-header .close-btn .my-x {
+  position: absolute;
+  top: 10%;
+  left: -20%;
+}
+
+.box-confirm .message-header .close-btn:hover {
+  color: #818181;
+}
+
+.box-confirm .message {
+  padding: 1vh 1vw;
+  width: 100%;
+  height: 40%;
+}
+
+.box-confirm .button {
+  position: absolute;
+  bottom: 5%;
+  right: 0%;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: 30%;
+}
+
+.box-confirm .button .btn {
+  width: 40%;
+  height: 70%;
+  font-size: 90%;
+}
+
+.box-confirm .button .btn .realign {
+  position: relative;
+  left: -35%;
+}
+
+.active {
+  display: initial;
+}
+
+.form-order {
+  padding: 10vh 0;
+}
+
+.form-order .form-horizontal {
+  padding: 2vh 2vw 4vh;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  background: #fff;
+}
+
+.form-order .form-horizontal .order-head {
+  margin-bottom: 4vh;
+  padding-bottom: 2vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border-bottom: 1px solid #dedede;
+}
+
+.form-order .form-horizontal .info-product {
+  padding: 0 5%;
+  width: 100%;
+  border-bottom: 1px dashed #ccc;
+  font-size: 80%;
+}
+
+.form-order .form-horizontal .info-product .product-item {
+  position: relative;
+  margin-bottom: 4vh;
+  height: 20vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.form-order .form-horizontal .info-product .product-item .product-image {
+  height: 100%;
+}
+
+.form-order .form-horizontal .info-product .product-item .product-image .img {
+  height: 100%;
+}
+
+.form-order .form-horizontal .info-product .product-item .product-image .img img {
+  height: 100%;
+}
+
+.form-order .form-horizontal .info-product .product-item .product-info {
+  width: 70%;
+}
+
+.form-order .form-horizontal .info-product .product-item .product-info .product-spec .info {
+  margin: 0;
+}
+
+.form-order .form-horizontal .info-product .product-item .product-info .product-spec .name {
+  font-size: 1.5em;
+}
+
+.form-order .form-horizontal .info-product .product-item .product-info .price {
+  margin-top: 2vh;
+  font-size: 1.25em;
+}
+
+.form-order .form-horizontal .info-product .product-item .delete-btn {
+  position: absolute;
+  bottom: 0;
+  left: 30%;
+  background: none;
+  color: red;
+  border: none;
+}
+
+.form-order .form-horizontal .cart-summary {
+  margin-bottom: 4vh;
+  padding: 2vh 0;
+  border-bottom: 1px dashed #dedede;
+}
+
+.form-order .form-horizontal .cart-summary .cart-format {
+  margin-bottom: 2vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.form-order .form-horizontal .form-group {
+  margin-bottom: 4vh;
+}
+
+.form-order .form-horizontal .form-group .personal-info {
+  padding-bottom: 4vh;
+  border-bottom: 1px dashed #dedede;
+}
+
+.form-order .form-horizontal .form-group .order-method {
+  margin-bottom: 4vh;
+}
+
+.form-order .form-horizontal .form-group .order-method label {
+  margin: 0;
+}
+
+.form-order .form-horizontal .form-group .address-opt {
+  margin-bottom: 4vh;
+  padding-left: 2vw;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+}
+
+.form-order .form-horizontal .form-group .order-btn {
+  width: 100%;
+  background-color: #FFC107;
+  color: white;
+}
+
+.form-order .form-horizontal .user-info {
+  margin-bottom: 4vh;
+  padding-bottom: 2vh;
+  width: 100%;
+  border-bottom: 1px solid #dedede;
+}
+
+.form-order .form-horizontal .order-info {
+  margin-bottom: 4vh;
+  padding-bottom: 2vh;
+  width: 100%;
+  border-bottom: 1px solid #dedede;
+}
+
+.form-order .form-horizontal .info-product {
+  margin-bottom: 4vh;
+  padding-bottom: 2vh;
+  width: 100%;
+  border-bottom: 1px solid #dedede;
+}
+
+.form-order .form-horizontal .info-product .product-item {
+  border-bottom: 1px dashed #dedede;
+  padding-bottom: 2vh;
 }
