--- a/public/styles/loginForm.scss
+++ b/public/styles/loginForm.scss
@@ -3,6 +3,7 @@
     width: 100%;
     height: auto;
     .login-wrapper {
+        position: fixed;
         z-index: 5;
         width: 100%;
         height: 100vh;
