--- a/public/styles/loginForm.scss
+++ b/public/styles/loginForm.scss
@@ -12,6 +12,7 @@
         border: 1px solid red;
         visibility: hidden;
         background-color: white;
+        border-radius: 5px;
         //display: none;
     }
 
