Done stylingfor admin page

--- a/public/styles/loginForm.scss
+++ b/public/styles/loginForm.scss
@@ -2,6 +2,10 @@
     position: relative;
     width: 100%;
     height: auto;
+
+    .container{
+        height: 100vh;
+    }
     .login-wrapper {
         position: absolute;
         top: 0;
