--- a/public/index.css
+++ b/public/index.css
@@ -132,6 +132,10 @@ body {
 .home-wrapper {
   position: relative;
   width: 100%;
+  height: auto;
+}
+
+.home-wrapper .container {
   height: 100vh;
 }
 
@@ -206,8 +210,39 @@ body {
 
 .admin-layout .container .manage-staff-container .staff-table-wrapper {
   width: 100%;
-  border: 1px solid red;
   height: 80%;
+  border-radius: 5px 5px 0 0;
+  overflow: hidden;
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+.admin-layout .container .manage-staff-container .staff-table-wrapper .content-table div {
+  padding: 12px 15px;
+}
+
+.admin-layout .container .manage-staff-container .staff-table-wrapper .table-head {
+  background-color: #009879;
+  color: #ffffff;
+  text-align: left;
+  font-weight: bold;
+}
+
+.admin-layout .container .manage-staff-container .staff-table-wrapper .staff-table-row:nth-of-type(even) {
+  background-color: #f3f3f3;
+  color: #009879;
+  font-weight: bold;
+}
+
+.admin-layout .container .manage-staff-container .staff-table-wrapper .staff-table-row:last-of-type {
+  border-bottom: 2px solid #009879;
+}
+
+.admin-layout .container .manage-staff-container .staff-table-wrapper .table-head {
+  background-color: #009879;
+  color: #ffffff;
+  text-align: left;
+  font-weight: bold;
 }
 
 .admin-layout .container .manage-staff-container .staff-table-wrapper .staff-table-row {
@@ -215,15 +250,45 @@ body {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: 40px;
-  border: 1px solid blue;
+  height: 50px;
+  border-bottom: 1px solid #dddddd;
   text-align: center;
 }
 
 .admin-layout .container .manage-staff-container .staff-table-wrapper .staff-table-row .table-cell {
+  padding: 6px;
   width: 50px;
-  border: 0.5px solid black;
   text-align: center;
+}
+
+.admin-layout .container .manage-staff-container .staff-table-wrapper .staff-table-row .table-cell .open-update-btn {
+  border: none;
+  background-color: #009879;
+  color: #ffffff;
+  height: 30px;
+  border-radius: 5px;
+  -webkit-box-shadow: 1px 1px 10px #00b994;
+          box-shadow: 1px 1px 10px #00b994;
+}
+
+.admin-layout .container .manage-staff-container .staff-table-wrapper .navigation-btn {
+  list-style: none;
+  color: #009879;
+  font-weight: bold;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 5px;
+  height: 30px;
+}
+
+.admin-layout .container .manage-staff-container .staff-table-wrapper .navigation-btn .nav-btn {
+  padding: 0 4px;
+  margin: 0px 4px;
+  width: auto;
 }
 
 .admin-layout .container .manage-staff-container .staff-update-form {
@@ -231,12 +296,50 @@ body {
   top: 50%;
   left: 50%;
   width: 500px;
-  border: 1px solid red;
+  border: 1px solid #009879;
   z-index: 100;
   background-color: white;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   visibility: hidden;
+  padding: 16px;
+  border-radius: 14px;
+}
+
+.admin-layout .container .manage-staff-container .staff-update-form .close-btn {
+  position: absolute;
+  right: 16px;
+  top: 16px;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  background-color: #be0000;
+  text-align: center;
+  line-height: 10px;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.admin-layout .container .manage-staff-container .staff-update-form label {
+  font-size: 18px;
+  color: #009879;
+  font-weight: 600;
+}
+
+.admin-layout .container .manage-staff-container .staff-update-form .update-btn {
+  position: relative;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  background-color: #009879;
+  border: none;
+}
+
+.admin-layout .container .manage-staff-container .staff-update-form .form-title {
+  text-align: center;
+  font-size: 20px;
+  color: #009879;
+  font-weight: 600;
 }
 
 .admin-layout .container .manage-staff-container .active {
@@ -247,10 +350,20 @@ body {
   position: relative;
   height: 100vh;
   width: 15%;
-  border: 1px solid red;
+  -webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
 }
 
-.admin-layout .slide-bar .slide-bar-brand {
+.admin-layout .slide-bar .slide-bar-header {
+  height: 112px;
+  background-color: #009879;
+  color: #fff;
+  -webkit-box-shadow: inset -6px 0px 10px #009879;
+          box-shadow: inset -6px 0px 10px #009879;
+  border-radius: 0px 5px 0px 0px;
+}
+
+.admin-layout .slide-bar .slide-bar-header .slide-bar-brand {
   width: 100%;
   height: 40px;
   font-size: 20px;
@@ -259,43 +372,86 @@ body {
   color: black;
   font-weight: 600;
   padding: 16px 0px;
+  color: #ffffff;
 }
 
-.admin-layout .slide-bar .slide-bar-brand a {
+.admin-layout .slide-bar .slide-bar-header .slide-bar-brand a {
   text-decoration: none;
   color: black;
   line-height: 22px;
+  color: #ffffff;
 }
 
-.admin-layout .slide-bar .slide-bar-admin-info {
+.admin-layout .slide-bar .slide-bar-header .slide-bar-admin-info {
   text-align: center;
 }
 
-.admin-layout .slide-bar .slide-bar-admin-info .slide-bar-admin-welcome,
-.admin-layout .slide-bar .slide-bar-admin-info .slide-baar-admin-name {
+.admin-layout .slide-bar .slide-bar-header .slide-bar-admin-info .slide-bar-admin-welcome,
+.admin-layout .slide-bar .slide-bar-header .slide-bar-admin-info .slide-baar-admin-name {
   margin: 0px;
   height: 30px;
 }
 
 .admin-layout .slide-bar .slide-bar-action {
   position: absolute;
-  bottom: 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
   width: 100%;
-  height: 40px;
+  height: 50px;
+  background-color: #009879;
+  color: #fff;
+  -webkit-box-shadow: inset -6px 0px 10px #009879;
+          box-shadow: inset -6px 0px 10px #009879;
+  border-radius: 0px 0px 5px 0px;
+}
+
+.admin-layout .slide-bar .slide-bar-action a {
+  color: #ffffff;
+  text-decoration: none;
 }
 
 .admin-layout .slide-bar .side-bar-function-list {
   margin-top: 24px;
   width: 100%;
-  border: 1px solid green;
-  height: calc(100% - 164px);
+  height: calc(100% - 184px);
 }
 
 .admin-layout .slide-bar .side-bar-function-list .function-item {
-  height: 30px;
+  height: 40px;
   text-align: center;
-  border: 1px solid red;
   margin: 5px 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #f3f3f3;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.admin-layout .slide-bar .side-bar-function-list .function-item a {
+  color: #009879;
+  font-weight: 600;
+}
+
+.admin-layout .slide-bar .side-bar-function-list .function-item:hover {
+  background-color: #009879;
+}
+
+.admin-layout .slide-bar .side-bar-function-list .function-item:hover a {
+  color: #ffffff;
 }
 /*# sourceMappingURL=index.css.map */
