--- a/public/styles/admin.scss
+++ b/public/styles/admin.scss
@@ -1,8 +1,10 @@
+
 .admin-layout {
     display: flex;
     margin:0px;
     padding:0px;
     height: 100vh !important;
+   
     .container {
         margin: 0px;
         padding: 0px 24px;
@@ -32,36 +34,123 @@
             }
             .staff-table-wrapper {
                 width: 100%;
-                border: 1px solid red;
                 height: 80%;
-                // overflow-x: hidden;
-                // overflow-y: auto;
+                border-radius: 5px 5px 0 0;
+                overflow: hidden;
+                box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+                .content-table div {
+                    padding: 12px 15px;
+                }
 
+                .table-head {
+                    background-color: #009879;
+                    color: #ffffff;
+                    text-align: left;
+                    font-weight: bold;
+                }
+
+                .staff-table-row:nth-of-type(even) {
+                    background-color: #f3f3f3;
+                    color: #009879;
+                    font-weight: bold;
+                }
+
+                .staff-table-row:last-of-type {
+                    border-bottom: 2px solid #009879;
+                }
+                .table-head {
+                    background-color: #009879;
+                    color: #ffffff;
+                    text-align: left;
+                    font-weight: bold;
+                }
                 .staff-table-row {
                     display: flex;
                     width: 100%;
-                    height: 40px;
-                    border: 1px solid blue;
+                    height: 50px;
+                    border-bottom: 1px solid #dddddd;
                     text-align: center;
                     .table-cell {
+                        padding:6px;
                         width: 50px;
-                        border: 0.5px solid black;
+                        // border: 0.5px solid black;
                         text-align: center;
+                        
+                            .open-update-btn {
+                                border: none;
+                                background-color: #009879;
+                                color: #ffffff;
+                                height: 30px;
+                                border-radius: 5px;
+                                box-shadow: 1px 1px 10px #00b994;
+                            }
+                       
                     }
                 }
-            }
-            .staff-update-form {
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                width: 500px;
-                border: 1px solid red;
-                z-index: 100;
-                background-color: white;
-                transform: translate(-50%, -50%);
-                visibility: hidden;
-            }
+                .navigation-btn {
+                    list-style: none;
+                    color: #009879;
+                    font-weight: bold;
+                    display: flex;
+                    justify-content: center;
+                    margin-top: 5px;
+                    height: 30px;
 
+                    .nav-btn {
+                        padding: 0 4px;
+                        margin: 0px 4px;
+                        width: auto;
+                    }
+                }
+                
+            }
+             .staff-update-form {
+                 position: absolute;
+                 top: 50%;
+                 left: 50%;
+                 width: 500px;
+                 border: 1px solid #009879;
+                 z-index: 100;
+                 background-color: white;
+                 transform: translate(-50%, -50%);
+                 visibility: hidden;
+                 padding: 16px;
+                 border-radius: 14px;
+                .close-btn {
+                    position: absolute;
+                    right: 16px;
+                    top: 16px;
+                    width: 14px;
+                    height: 14px;
+                    border-radius: 50%;
+                    background-color: rgb(190, 0, 0);
+                    text-align: center;
+                    line-height: 10px;
+                    color: #ffffff;
+                    cursor: pointer;
+                }
+                 label {
+                     font-size: 18px;
+                     color: #009879;
+                     font-weight: 600;
+                 }
+
+                 .update-btn {
+                     position: relative;
+                     left: 50%;
+                     transform: translateX(-50%);
+                     background-color: #009879;
+                     border: none;
+                 }
+
+                 .form-title {
+                     text-align: center;
+                     font-size: 20px;
+                     color: #009879;
+                     font-weight: 600;
+                 }
+                 
+             }
             .active {
                 visibility: visible;
                 //display: unset;
@@ -75,55 +164,90 @@
         position: relative;
         height: 100vh;
         width: 15%;
-        border: 1px solid red;
-
-        .slide-bar-brand {
-            width: 100%;
-            height: 40px;
-            font-size: 20px;
-            line-height: 22px;
-            text-align: center;
-            color: black;
-            font-weight: 600;
-            padding: 16px 0px;
-
-            a {
-                text-decoration: none;
-                color: black;
+        box-shadow:0px 0px 20px rgba(0, 0, 0, 0.15);
+        .slide-bar-header{
+            height: 112px;
+             background-color: #009879;
+             color:#fff;
+             box-shadow: inset -6px 0px 10px #009879;
+             border-radius: 0px 5px 0px 0px;
+            .slide-bar-brand {
+                width: 100%;
+                height: 40px;
+                font-size: 20px;
                 line-height: 22px;
+                text-align: center;
+                color: black;
+                font-weight: 600;
+                padding: 16px 0px;
+                color: #ffffff;
+                a {
+                    text-decoration: none;
+                    color: black;
+                    line-height: 22px;
+                    color: #ffffff;
+                }
             }
-        }
 
-        .slide-bar-admin-info {
-            text-align: center;
+            .slide-bar-admin-info {
+                text-align: center;
 
-            .slide-bar-admin-welcome,
-            .slide-baar-admin-name {
-                margin: 0px;
-                height: 30px;
+                .slide-bar-admin-welcome,
+                .slide-baar-admin-name {
+                    margin: 0px;
+                    height: 30px;
+                }
             }
-        }
 
+            
+        }
         .slide-bar-action {
             position: absolute;
-            bottom: 24px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             text-align: center;
             width: 100%;
-            height: 40px;
+            height: 50px;
+             background-color: #009879;
+             color:#fff;
+             box-shadow: inset -6px 0px 10px #009879;
+             border-radius: 0px 0px 5px 0px;
+             a{
+                 color: #ffffff;
+                 text-decoration: none;
+             }
         }
-        .side-bar-function-list {
-            margin-top: 24px;
-            width: 100%;
-            border: 1px solid green;
-            height: calc(100% - 164px);
+       .side-bar-function-list {
+           margin-top: 24px;
+           width: 100%;
+           height: calc(100% - 184px);
 
-            .function-item {
-                height: 30px;
-                text-align: center;
-                border: 1px solid red;
-                margin: 5px 0px;
-            }
-        }
+           .function-item {
+               height: 40px;
+               text-align: center;
+               margin: 5px 0px;
+               display: flex;
+               align-items: center;
+               justify-content: center;
+               background-color: #f3f3f3;
+
+               a {
+                   color: #009879;
+                   font-weight: 600;
+               }
+
+               transition: 0.3s;
+
+               &:hover {
+                   background-color: #009879;
+
+                   a {
+                       color: #ffffff;
+                   }
+               }
+           }
+       }
     }
 
 }
