--- a/public/index.scss
+++ b/public/index.scss
@@ -6,7 +6,7 @@
 
 @media (min-width: 1200px) {
     .container {
-        width: 1600px;
+        max-width: 1600px;
         margin: 0 8%;
         
     }     
@@ -18,3 +18,4 @@
 @import "./styles/category";
 @import './styles/location';
 @import './styles/loginForm';
+@import './styles/home';
