--- a/public/styles/_category.scss
+++ b/public/styles/_category.scss
@@ -25,15 +25,21 @@
         right:0;
         width: 80%;
         .product_item {
-            border: solid;
+            height: 30vh;
+            width: 20%;
+            border:  solid white;
             display: inline-block;
-            margin: 0 5px 5px 5px ;
             img {
-                height: 250px;
-                width: 13vw;
+                height: 100%;
+                width: 100%;
             }
             &:hover {
                 border-color: red ;
+            }
+            a {
+                
+                height: 100vh;
+                width: 100vw;;
             }
         }
     }
