--- a/public/index.css
+++ b/public/index.css
@@ -205,7 +205,13 @@ body {
   padding: 4px 14px;
   height: 30px;
   line-height: 15px;
-  border: 1px solid blue;
+  border: 1.5px solid #009879;
+}
+
+.admin-layout .container .manage-staff-container .table-action .btn-create-staff a {
+  text-decoration: none;
+  color: #009879;
+  font-weight: 600;
 }
 
 .admin-layout .container .manage-staff-container .staff-table-wrapper {
@@ -445,6 +451,7 @@ body {
 .admin-layout .slide-bar .side-bar-function-list .function-item a {
   color: #009879;
   font-weight: 600;
+  text-decoration: none;
 }
 
 .admin-layout .slide-bar .side-bar-function-list .function-item:hover {
@@ -457,7 +464,8 @@ body {
 
 .admin-login-screen {
   position: relative;
-  height: 100%;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .admin-login-screen .admin-login-form-title {
