hot fixed layout

--- a/public/styles/admin.css
+++ b/public/styles/admin.css
@@ -290,3 +290,4 @@
 .admin-layout .slide-bar .side-bar-function-list .function-item:hover a {
   color: #ffffff;
 }
+/*# sourceMappingURL=admin.css.map */
