--- a/public/styles/loginForm.scss
+++ b/public/styles/loginForm.scss
@@ -1,8 +1,8 @@
 .home-wrapper{
     position: relative;
     width: 100%;
-    height: auto;
-
+    height: 100vh;
+    overflow-y: auto;
     .container{
         height: auto;
     }
