--- a/public/styles/_returnpolicy.scss
+++ b/public/styles/_returnpolicy.scss
@@ -5,8 +5,8 @@ body {
     height: 80%;
 }
 .returnpolicy {
-    position: relative;
-    left: 20vw;
+    // position: relative;
+    // left: 20vw;
     h1 {
         text-align: center;
     }
