--- a/public/styles/_installment.scss
+++ b/public/styles/_installment.scss
@@ -1,6 +1,6 @@
 .installment {
-    position: relative;
-    left: 20vw;
+    // position: relative;
+    // left: 20vw;
 
     h1 {
         text-align: center;
