--- a/public/styles/loginForm.css
+++ b/public/styles/loginForm.css
@@ -2,13 +2,10 @@
   position: relative;
   width: 100%;
   height: auto;
-<<<<<<< HEAD
 }
 
 .home-wrapper .container {
-  height: 100vh;
-=======
->>>>>>> e0cb30eaf20db030ed6f7cc37219856bee013498
+  height: auto;
 }
 
 .home-wrapper .login-wrapper {
